--- a/packages/@ionic/lab/src/assets/_variables.scss
+++ b/packages/@ionic/lab/src/assets/_variables.scss
@@ -1,5 +1,6 @@
 $font-family-sans-serif:      'AvenirNextLTPro-Regular', 'Helvetica Neue', 'Helvetica', Arial, sans-serif;
 $font-family-base:            $font-family-sans-serif !default;
+$font-family-medium:          'AvenirNextLTPro-Medium', 'Helvetica Neue', 'Helvetica', Arial, sans-serif;
 
 $font-size-base:              1rem !default; // Assumes the browser default, typically `16px`
 $font-size-lg:                ($font-size-base * 1.25) !default;
@@ -29,3 +30,4 @@ $link-hover-decoration:       underline !default;
 $icon-color:    #858d9b;
 $main-bg:       $body-bg;
 $section-bg:    #151a21;
+$font-color:    #a2a9b4;
