--- a/packages/@ionic/lab/src/stencil/components/ionlab-app/ionlab-app.scss
+++ b/packages/@ionic/lab/src/stencil/components/ionlab-app/ionlab-app.scss
@@ -2,8 +2,37 @@
 @import '../../../assets/_variables';
 @import '../../../assets/_reboot';
 
+html,
+body {
+  height: 100%;
+}
+
 body {
   -webkit-font-smoothing: antialiased;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  font-weight: normal;
+}
+
+a {
+  color: $font-color;
+
+  &:hover {
+    text-decoration: none;
+    color: $font-color;
+  }
+}
+
+ionlab-app > div {
+  display: flex;
+  flex-direction: column;
+  height: 100%;
 }
 
 header {
@@ -21,6 +50,10 @@ header {
     font-size: 22px;
     color: $icon-color;
   }
+}
+
+.icon {
+  cursor: pointer;
 }
 
 #logo {
@@ -61,5 +94,44 @@ header {
 
   .fullscreen-icon {
     margin-left: 5px;
+  }
+}
+
+main {
+  color: $font-color;
+  display: flex;
+  flex: 1;
+}
+
+#preview {
+  display: flex;
+  flex: 1;
+  flex-wrap: wrap;
+  vertical-align: middle;
+  text-align: center;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+}
+
+footer {
+  width: 100%;
+  border-top: 1px solid rgba(0, 0, 0, 0.06);
+  background: $section-bg;
+  font-size: $font-size-sm;
+}
+
+#footer-left {
+  float: left;
+  padding: 14px 0 14px 15px;
+}
+
+#footer-right {
+  float: right;
+  padding: 14px 15px 14px 5px;
+
+  a {
+    font-family: $font-family-medium;
+    margin-left: 10px;
   }
 }
