--- a/packages/@ionic/lab/src/stencil/components/ionlab-preview/ionlab-preview.scss
+++ b/packages/@ionic/lab/src/stencil/components/ionlab-preview/ionlab-preview.scss
@@ -9,7 +9,7 @@ ionlab-preview {
   justify-content: center;
   align-items: center;
   width: 100%;
-  overflow: auto;
+  overflow: scroll;
 }
 
 .device {
