fix(lab): fix display bug with narrow screen height
fixes https://github.com/ionic-team/ionic-cli/issues/3044

--- a/packages/@ionic/lab/src/stencil/components/ionlab-device-frame/ionlab-device-frame.css
+++ b/packages/@ionic/lab/src/stencil/components/ionlab-device-frame/ionlab-device-frame.css
@@ -1,10 +1,7 @@
 ionlab-device-frame {
-  display: inline-block;
+  display: block;
   margin: 0 20px;
   vertical-align: middle;
-
-  --frame-width: 375px;
-  --frame-height: 667px;
 }
 
 ionlab-device-frame h2 {
