--- a/packages/@ionic/lab/src/stencil/components/ionlab-preview/ionlab-preview.css
+++ b/packages/@ionic/lab/src/stencil/components/ionlab-preview/ionlab-preview.css
@@ -1,11 +1,19 @@
 ionlab-preview {
+  text-align: center;
+  flex: 1;
+  overflow: scroll;
+
+  --frame-width: 375px;
+  --frame-height: 667px;
+}
+
+ionlab-preview > div {
   display: flex;
   flex: 1;
   flex-wrap: wrap;
   vertical-align: middle;
-  text-align: center;
   justify-content: center;
   align-items: center;
-  width: 100%;
-  overflow: scroll;
+  padding-bottom: 60px;
+  min-height: 100%;
 }
