fix(lab): default cursor for platform titles

--- a/packages/@ionic/lab/src/stencil/components/ionlab-sidebar/ionlab-sidebar.css
+++ b/packages/@ionic/lab/src/stencil/components/ionlab-sidebar/ionlab-sidebar.css
@@ -21,6 +21,7 @@ ionlab-sidebar h3 .icon {
   font-size: 24px;
   color: var(--font-color);
   margin-top: -5px;
+  cursor: pointer;
 }
 
 ionlab-sidebar .menu {
