fix(lab): improve dev experience on smaller screens
When window height is less than 850px:

- hide device titles
- reduce size of device previews

fixes https://github.com/ionic-team/ionic-cli/issues/3658

--- a/packages/@ionic/lab/src/stencil/components/ionlab-device-frame/ionlab-device-frame.css
+++ b/packages/@ionic/lab/src/stencil/components/ionlab-device-frame/ionlab-device-frame.css
@@ -78,3 +78,9 @@ ionlab-device-frame .frame-container iframe {
   background-image: url('/assets/wp-statusbar.png');
   background-color: #fff;
 }
+
+@media only screen and (max-height: 850px) {
+  ionlab-device-frame h2 {
+    display: none;
+  }
+}
